[package]
description = "rust port of identicon generator for polkadot from polkadot.js"
license = "Apache-2.0"
name = "plot_icon"
version = "0.1.4"
authors = ["Alexander Slesarev <slesarew@gmail.com>", "Vera Abramova <abramova.vera@gmail.com>"]
edition = "2021"
repository = "https://github.com/paritytech/polkadot-identicon-rust"
homepage = "https://github.com/paritytech/polkadot-identicon-rust"
keywords = ["identicon", "icon", "parity", "polkadot", "substrate"]

[dependencies]
blake2-rfc = "0.2.18"
hex = {version = "0.4.3", optional = true}
image = {version = "0.24.0", default-features = false, features = ["ico"], optional = true}
palette = {version = "0.6.0", default-features = false, features = ["std"]}
png = {version = "0.17.3", optional = true}
svg = {version = "0.10.0", optional = true}

[features]
default = ["pix", "vec"]

pix = ["image", "png"]
vec = ["hex", "svg"]

[lib]
name = "plot_icon"
crate-type = ["lib"]
